    the case of Python plugins has been eliminated.
* New plugin switch handling
  - SwitchPreparationBackward, SwitchPreparationForward and SwitchCanceled,
    required for new panning gesture to change between plugins/subviews.
* New MAbstractInputMethodHost::preeditClickPos() API:
  - Forwards the preedit-local coordinate to input method plugins.

BUG FIXES
* Fixes: NB#277834 - libmaliit seg. fault in libmeegotouch unit tests:
  ut_mtextedit and ut_minputmethodstate
* Fixes: BMC#19298 - [FEA] Provide PySide bindings for Maliit Plugin API

0.80.4
======

CHANGES SINCE 0.80.3
* Improved legacy support:
  - Applications that want to integrate with input methods can freely choose
    whether to use MTF/libmeegotouch or libmaliit
* Improved unit tests:
  - Added tests for Maliit::AttributeExtension{, Registry} API
  - Fixed skipped unit tests
  - Fix tests for plugin examples
* Build system:
  - Fix out-of-tree builds

BUG FIXES
* None

0.80.3
======

CHANGES SINCE 0.80.2
* Remove Harmattan-specific settings applet
* Add support for ContextKit keyboard tracker

BUG FIXES
* Fixes: AttributeExtensions with libmaliit

0.80.2
======

CHANGES SINCE 0.80.1
* New libmaliit contains additional API for application developers to interact
  with input methods (besides Qt's input context API):
  - Maliit::InputMethod: Query input method area and control input method
    orientation,
  - Maliit::AttributeExtension: Allows to control input method toolbar and
    customization of certain virtual keyboard keys,
  - Maliit::PreeditInjectionEvent: Used by text entries to inject a new preedit
    into the input context,
  - Maliit namespace for all input method related enums, superseds MInputMethod
    namespace.
* New input context name:
  - Use QT_IM_MODULE=Maliit for regular builds and QT_IM_MODULE=MInputContext
    for legacy builds.
* Script for making Maliit Plugin SDK tarball.
* Enabled all unit tests again.

BUG FIXES